# Hackaton2026

./: .gitignore  README.md  TODO.md  USAGE_CPP.md  USAGE_RUN.md  pyproject.toml  run.bat  run.sh
.claude/: settings.local.json
src/: controller.py  game.py  main.py  pyvenv.cfg  utils.py  view.py
src/grid/: lazy_grid.py
src/views/: desert_tile_view.py  player_view.py  tile_view.py  water_tile_view.py  world_view.py
