[project]
name = "hackaton206"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "pybind11 (>=3.0.1,<4.0.0)",
    "setuptools (>=82.0.0,<83.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"